# Blogging-API

./: .env  .gitignore  Cargo.toml
config/: prometheus.yml
entity/: Cargo.toml
entity/src/: comment.rs  mod.rs  post.rs  prelude.rs  user.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231009_234608_create_posts_table.rs  m20231009_234627_create_comments_table.rs
public/: index.html
src/: main.rs
src/handlers/: auth_handlers.rs  mod.rs  post_handler.rs  user_handler.rs
src/models/: mod.rs  post_models.rs  user_models.rs
src/routes/: auth_routes.rs  home_routes.rs  mod.rs  user_routes.rs
src/utils/: api_error.rs  constants.rs  guards.rs  jwt.rs  mod.rs
