[package]
name = "Rust_Axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
axum = { version = "0.6.20", features = ["headers"] }
tokio = { version = "1.31.0", features = ["full"] }
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
uuid = { version = "1.4.1", features = ["v4"] }
chrono = "0.4.26"
serde = "1.0.188"
tower-http = { version = "0.4.4", features = ["cors"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
